# rs-events

./: .env  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  example.http
migrations/2018-02-23-163806_init/: up.sql
src/: db.rs  lib.rs  schema.rs  web.rs
src/models/: mod.rs  user.rs
src/models/user/: mod.rs  pg.rs
src/services/: mod.rs  user.rs
src/services/event/: mod.rs
src/services/user/: mod.rs  service.rs  web_app.rs
src/web/: mod.rs
tests/: Dockerfile  Makefile  db.Dockerfile  docker-compose.yml  package-lock.json  package.json  run-server.sh  user_service.rs  user_web_app.rs
tests/features/: user_service.feature
tests/features/step_definitions/: user_service.js  world.js
